--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" href="./build/css/main.css?v=e89992e5b6">
+	<link rel="stylesheet" href="./build/css/main.css">
 </head>
 <body>
 	<div class="box">
